--- a/css/style.css
+++ b/css/style.css
@@ -57,18 +57,15 @@ body,html{
 .apresentacao{
     width: 100%;
     min-height: 100vh;
+    background-image: url("../img/abertura.png") !important;
     background-size: cover;
-    background-image: url('img/background-g91a6b85a5_1920.jpg');
     display:flex;
     justify-content: center;
     align-items: center;
 }
-.apresentacao img{
-    width: 100%;
-    height: 100%;
-}
 
 .containeraps{
+    position: absolute;
     margin-top: 100px;
     display:flex;
     flex-direction: column;
