--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: "Open Sans";
+    text-align: center;
 }
 
 body,html{
@@ -64,8 +65,10 @@ body,html{
     align-items: center;
 }
 
+
+
 .containeraps{
-    position: absolute;
+    text-align: center;
     margin-top: 100px;
     display:flex;
     flex-direction: column;
@@ -73,18 +76,23 @@ body,html{
     justify-content: center;
     align-items: center;
     color: beige;
+    padding: 20px;
 }
 
-.nome{
+.containeraps .titulo{
     font-family:monospace;
-    font-size: 3em;
+    font-size: 1.2em;
     background-color: rgba(43, 6, 255, 0.8);
     padding: 20px;
 }
 
+.containeraps .titulo h1{
+    background-color: transparent;
+}
+
 .func{
     font-family: monospace;
-    font-size: 3em;
+    font-size: 2em;
     background-color: rgba(43, 6, 255, 0.8);
     padding: 20px;
 }
@@ -95,7 +103,7 @@ body,html{
     height: 50px;
     background-color: black;
     transition: 1s;
-    margin-top: 100px;
+    margin-top: 50px;
     font-size: 1.5em;
     border: none;
     padding: 2px;
@@ -407,7 +415,6 @@ body,html{
     color: #000000;
     font-size: 1.5em;
     padding:  15px 0 15px 0;
-    margin-left: 35%;
     margin-top: 2%;
 }
 
@@ -419,7 +426,7 @@ body,html{
 
 footer{
     width: 100%;
-    height: 200px;
+    height: 100%;
     background-color: black;
     display: none;
 }
@@ -430,15 +437,50 @@ footer{
     flex-wrap: wrap;
     justify-content: center;
     color: #CCD7E1;
+    padding: 2%;
 }
 
 .rodape p{
-    margin-top: 50px;
+    margin-top: 5px;
     border-right: #CCD7E1 1px solid;
     border-left: #CCD7E1 1px solid;
     padding: 5px;
+    color: #585858;
 }
 
 .rodape p a{
+    color: #585858;
     text-decoration: none;
+}
+
+@media screen and (max-width:768px){
+    .containeraps{
+        text-align: center;
+        padding: 2%;
+
+    }
+    .containeraps .titulo{
+        font-size: 0.7em !important;
+        padding: 10px;
+    }
+    .func{
+        font-size: 20px;
+        padding: 20px;
+    }
+
+    .btn button{
+        margin-top: 10px;
+    }
+    .conteudo{
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .titulolgn{
+        text-align: center;
+        font-size: 2em;
+    }
+    .rodape p{
+        font-size: 10px;
+        margin-top: 5px;
+    }
 }
