--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: "Open Sans";
-    text-align: center;
 }
 
 body,html{
@@ -177,9 +176,13 @@ main,h1,p,a{
 .text{
     font-size: 1.5em;
     margin: 10px;
+    text-align: left;
 }
 .text p{
     font-family:Arial, Helvetica, sans-serif;
+    text-align: left;
+}
+.text p h3{
     text-align: left;
 }
 
