--- a/css/style.css
+++ b/css/style.css
@@ -510,4 +510,8 @@ footer{
         font-size: 10px;
         margin-top: 5px;
     }
+    .listaLingua ul li img{
+        width: 150px;
+        height: 150px;
+    }
 }
