--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ main,h1,p,a{
     background-color: rebeccapurple;
     display: flex;
     flex-wrap: wrap;
+    gap: 40px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
